code cosmetic + toString()